force-app/main/default/objects/Global_Capability_Country__c/Global_Capability_Country__c.object-meta.xml
<CustomObject>
    <label>Global Capability Country</label>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Capability Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>