force-app/main/default/objects/Global_Capability_Country__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>IF(ISPICKVAL(Division__c, &apos;Asia Pacific&apos;),&apos;IMAPSalesSupport@ironmountain.com&apos;,IF(ISPICKVAL(Division__c, &apos;Europe&apos;),&apos;IMESales@emea.ironmountain.com&apos;, IF(ISPICKVAL(Division__c, &apos;Latin America&apos;), &apos;IMLASalesSupport@ironmountain.com&apos;, &apos;&apos;)))</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>