force-app/main/default/objects/Global_Capability_Country__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <formula>IF(ISPICKVAL(Division__c, &apos;Asia Pacific&apos;),&apos;+9122 2498 8416 &apos;,IF(ISPICKVAL(Division__c, &apos;Europe&apos;),&apos;+361 815 3676&apos;, IF(ISPICKVAL(Division__c, &apos;Latin America&apos;), &apos;+562 2395 7200&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>