force-app/main/default/objects/Global_Capability_Country__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <summaryForeignKey>Global_Capability_Location__c.Country__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>