force-app/main/default/objects/Global_Capability_Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Number_of_Locations__c</columns>
    <columns>Facility_HQ__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>