force-app/main/default/objects/Global_Capability_Country__c/listViews/Asia_Pacific.listView-meta.xml
<ListView>
    <fullName>Asia_Pacific</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Number_of_Locations__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Asia Pacific</value>
    </filters>
    <label>Asia Pacific</label>
    <language>en_US</language>
</ListView>