force-app/main/default/objects/Global_Capability_Country__c/listViews/Latin_America.listView-meta.xml
<ListView>
    <fullName>Latin_America</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Number_of_Locations__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Latin America</value>
    </filters>
    <label>Latin America</label>
    <language>en_US</language>
</ListView>